fix(content-item): add text overflow ellipsis to avoid overlap, add position relative and box-shadow

--- a/core/scss/components/content-item.scss
+++ b/core/scss/components/content-item.scss
@@ -2,6 +2,7 @@
 @import '../settings/fonts';
 @import '../tools/functions/core';
 @import '../tools/mixins/flex';
+@import '../tools/mixins/text-overflow';
 
 @mixin chat($width, $height) {
   width: $width;
@@ -10,17 +11,17 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  border: 1px solid rgba(0, 0, 0, 0.06);
+  border: 1px solid $black-06;
   border-radius: 4px;
-  box-shadow: inset 1px 0 0 0 rgba(0, 0, 0, 0.06),
-    inset -1px 0 0 0 rgba(0, 0, 0, 0.06);
+  box-shadow: inset 1px 0 0 0 $black-06,
+    inset -1px 0 0 0 $black-06;
 }
 
 @mixin file-aspect($width, $height, $margin: null) {
   width: $width;
   height: $height;
   margin: $margin;
-  background-position:center;
+  background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -33,7 +34,7 @@
     height: 196px;
     background-size: cover;
     border-radius: 4px;
-    box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.06);
+    box-shadow: 0 0 0 1px $black-06;
 
     &:hover .cui-content__hover {
       display: flex;
@@ -51,6 +52,7 @@
       margin-bottom: 8px;
       background-color: $gray-7;
       border-radius: 4px;
+      box-shadow: 0 0 0 1px $black-20;
 
       &:hover .cui-content__hover {
         visibility: visible;
@@ -67,6 +69,7 @@
 
     &--failed {
       background-color: $gray-7;
+      box-shadow: 0 0 0 1px $black-20;
 
       &-warning {
         margin-bottom: 10px;
@@ -110,7 +113,7 @@
     &--opacity {
       @extend .cui-content--centered;
 
-      background-color: rgba(237, 237, 237, 0.4);
+      background-color: $gray-6-40;
     }
 
     &__hover {
@@ -120,7 +123,7 @@
       bottom: 56px;
       width: 100%;
       height: 56px;
-      background-color: rgba(255, 255, 255, 0.7);
+      background-color: $white-70;
       border-radius: 0 0 4px 4px;
       visibility: hidden;
       align-self: flex-end;
@@ -140,6 +143,9 @@
         flex-direction: column;
 
         &--file-name {
+          @include text-overflow;
+
+          width: rem-calc(214);
           height: 24px;
           font-size: 16px;
           font-weight: bold;
@@ -167,13 +173,14 @@
   .cui-content-file {
     @include flex($jc: center, $ai: center);
 
+    position: relative;
     width: 204px;
     height: 136px;
     margin-bottom: 8px;
     background-repeat: no-repeat;
     background-size: 204px 136px;
     border-radius: 4px;
-    box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 0 0 1px $black-20;
 
     &:hover .cui-content-file__icon {
       visibility: visible;
@@ -196,7 +203,7 @@
       @include flex($jc: center, $ai: center);
 
       position: absolute;
-      bottom: 54px;
+      bottom: 0px;
       width: 204px;
       height: 56px;
       background-color: $white-60;
@@ -210,8 +217,8 @@
       height: 136px;
       margin-bottom: 8px;
       background-color: $white;
-      border: 1px solid rgba(0, 0, 0, 0.06);
       border-radius: 4px;
+      box-shadow: 0 0 0 1px $black-20;
 
       &:hover .cui-content-file__aspect {
         visibility: visible;
@@ -263,6 +270,9 @@
 
     &--sixteen-nine {
       @include file-aspect(100%, 116px, 10px 0);
+
+      position: relative;
+      top: 0.6rem;
     }
 
     &--nine-sixteen {
@@ -272,14 +282,14 @@
     &--one-one {
       @include file-aspect(136px, 136px, 0 auto);
 
-      border: 1px solid rgba(0, 0, 0, 0.06);
+      border: 1px solid $black-06;
       border-radius: 4px;
     }
 
     &--four-three {
       @include file-aspect(182px, 136px, 0 auto);
 
-      border: 1px solid rgba(0, 0, 0, 0.06);
+      border: 1px solid $black-06;
       border-radius: 4px;
     }
 
@@ -289,19 +299,20 @@
     }
 
     &__title {
+      @include text-overflow;
+
       width: 204px;
       height: 24px;
-      overflow: hidden;
       font-family: $brand-font-regular;
       font-size: 16px;
       line-height: 24px;
       color: #000000;
       text-align: center;
-      text-overflow: ellipsis;
-      white-space: nowrap;
     }
 
     &__subtitle {
+      @include text-overflow;
+
       width: 204px;
       height: 22px;
       font-family: $brand-font-regular;
@@ -312,8 +323,8 @@
     }
   }
 
-  .cui-no-border {
-    border: none;
+  .content-file--no-border {
+    box-shadow: none;
   }
 
   .cui-content__gif {
